--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
       
         </section>
 
-        <a class="form-btn" type="submit" disabled data-form-btn>
+        <a class="form-btn" href="./assets/files/BKSULTAN ISMATOV.pdf" data-form-btn>
           <ion-icon name="cloud-download-outline"></ion-icon>
           <span>Download Resume</span>
         </a>
