--- a/index.html
+++ b/index.html
@@ -125,28 +125,6 @@
 
         <div class="separator"></div>
 
-        <ul class="social-list">
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
       </div>
 
     </aside>
@@ -311,15 +289,14 @@
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Sujeeth Boddepalli<br/>Manager, Configuration | Hub Group</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    I nominate Beksultan Ismatov for the MVP Award for his exceptional contributions and dedication throughout 2024. 
+                    Beksultan has been a key player in the success of OM testing, managing three critical applications 
+                    (OTM, HubPro, and HCC) on his own. He ensured all deliverables were completed on time without 
+                    compromising quality and also trained other QA team members.
                   </p>
                 </div>
 
@@ -329,15 +306,14 @@
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Nagaraju Bitla<br/>Director, Applications | Hub Group</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Beksultan Ismatov played critical role in the successful rollout of Phase-1 OM implementation. His immense knowledge in IML and 
+                    various applications such as TPS, OTM, HCC, and Hub Pro has made a significant impact on executing OM test cases. 
+                    He collaborated, educated/helped other fellow QA's to learn and execute the test cases. Beksultan Ismatov plays a crucial role in 
+                    performing regression testing during OTM Quarterly upgrades and is responsible for testing IML and dedicated workflows.
                   </p>
                 </div>
 
@@ -347,15 +323,14 @@
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Sai Rajesh Korlam<br/>Information Security | Hub Group</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Beksultan Ismatov’s technical expertise in automating repetitive test cases, especially for OTM upgrades, 
+                    greatly improved efficiency and productivity. His collaborative attitude and readiness to help others, 
+                    even with a heavy workload, make him a trusted teammate. Beksultan Ismatov’s commitment to the team is evident in his 
+                    willingness to put in extra hours and step up during challenging times, ensuring the success of every project.
                   </p>
                 </div>
 
